// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverButton PopoverButton props and state menu item 1`] = `
<PopoverButtonComponent
  cyData="my-test-popover-button"
  disabled={false}
  icon="airplane"
  label="my label"
  onClick={[MockFunction]}
  onPopoverDismissed={[MockFunction]}
  onlyShowIcon={false}
  popupContent={
    <div>
      <p>
        Pop Up Content
      </p>
    </div>
  }
  renderAsMenuItem={true}
  tooltip="my tool tip"
  widthPx={150}
>
  <div
    data-cy="my-test-popover-button"
  >
    <Blueprint3.MenuItem
      disabled={false}
      icon="menu-open"
      label="opens dialog"
      multiline={false}
      onClick={[Function]}
      popoverProps={Object {}}
      shouldDismissPopover={true}
      text="my label"
    >
      <li
        className=""
      >
        <a
          className="bp3-menu-item bp3-popover-dismiss"
          label="opens dialog"
          onClick={[Function]}
        >
          <Blueprint3.Icon
            icon="menu-open"
          >
            <span
              className="bp3-icon bp3-icon-menu-open"
              icon="menu-open"
            >
              <svg
                data-icon="menu-open"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  menu-open
                </desc>
                <path
                  d="M9.99 11.99h-9c-.55 0-1 .45-1 1s.45 1 1 1h9c.55 0 1-.45 1-1s-.45-1-1-1zm0-5h-9c-.55 0-1 .45-1 1s.45 1 1 1h9c.55 0 1-.45 1-1s-.45-1-1-1zm0-5h-9c-.55 0-1 .45-1 1s.45 1 1 1h9c.55 0 1-.45 1-1s-.45-1-1-1zm5.71 5.3l-2-2a1.003 1.003 0 00-1.71.71v4a1.003 1.003 0 001.71.71l2-2c.18-.18.29-.43.29-.71s-.11-.53-.29-.71z"
                  fillRule="evenodd"
                  key="0"
                />
              </svg>
            </span>
          </Blueprint3.Icon>
          <Blueprint3.Text
            className="bp3-fill"
            ellipsize={true}
          >
            <div
              className="bp3-text-overflow-ellipsis bp3-fill"
            >
              my label
            </div>
          </Blueprint3.Text>
          <span
            className="bp3-menu-item-label"
          >
            opens dialog
          </span>
        </a>
      </li>
    </Blueprint3.MenuItem>
  </div>
</PopoverButtonComponent>
`;

exports[`PopoverButton PopoverButton renders 1`] = `
<PopoverButtonComponent
  cyData="my-test-popover-button"
  disabled={false}
  icon="airplane"
  label="my label"
  onClick={[MockFunction]}
  onPopoverDismissed={[MockFunction]}
  onlyShowIcon={false}
  popupContent={
    <div>
      <p>
        Pop Up Content
      </p>
    </div>
  }
  renderAsMenuItem={false}
  tooltip="my tool tip"
  widthPx={150}
>
  <div
    data-cy="my-test-popover-button"
  >
    <Blueprint3.Button
      active={false}
      alignText="left"
      className="toolbar-button"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "width": "150px",
        }
      }
      title="my tool tip"
    >
      <button
        className="bp3-button bp3-align-left toolbar-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        style={
          Object {
            "width": "150px",
          }
        }
        title="my tool tip"
        type="button"
      >
        <Blueprint3.Icon
          key="leftIcon"
        />
        <span
          className="bp3-button-text"
          key="text"
        >
          <span>
            my label
          </span>
          <Blueprint3.Icon
            icon="airplane"
            title={false}
          >
            <span
              className="bp3-icon bp3-icon-airplane"
              icon="airplane"
            >
              <svg
                data-icon="airplane"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <path
                  d="M16 1.5A1.498 1.498 0 0013.44.44L9.91 3.97 2 1 1 3l5.93 3.95L3.88 10H1l-1 1 3 2 2 3 1-1v-2.88l3.05-3.05L13 15l2-1-2.97-7.91 3.53-3.53c.27-.27.44-.65.44-1.06z"
                  fillRule="evenodd"
                  key="0"
                />
              </svg>
            </span>
          </Blueprint3.Icon>
        </span>
        <Blueprint3.Icon
          key="rightIcon"
        />
      </button>
    </Blueprint3.Button>
  </div>
</PopoverButtonComponent>
`;

exports[`PopoverButton PopoverButton shallow renders 1`] = `
<div
  data-cy="my-test-popover-button"
>
  <Blueprint3.Button
    active={false}
    alignText="left"
    className="toolbar-button"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "width": "150px",
      }
    }
    title="my tool tip"
  >
    <span>
      my label
    </span>
    <Blueprint3.Icon
      icon="airplane"
      title={false}
    />
  </Blueprint3.Button>
</div>
`;
